add 1.8 support